@@ -11,6 +11,7 @@
     <script src="js/bootstrap-sortable.js"></script>
     <script src="js/jquery.flot.min.js"></script>
     <script src="js/jquery.flot.time.js"></script>
+    <script src="js/jquery.flot.selection.js"></script>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-default navbar-fixed-top" role="navigation">
