@@ -2,6 +2,7 @@ Changelog for procgraph
 
 
 next:
+        - added zooming to graph
         - make graph label clickable
         - use single top spawn to update graph and top table
         - avoid useless flickering when updating graph
